--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@ requests>=2.27.1
 requests-toolbelt>=0.9.1
 pycryptodome>=3.14.1
 lxml>=4.9.1
-tftpy
-certipy-ad
-pandas
-tabulate
-asn1crypto
+tftpy==0.8.2
+certipy-ad==4.8.2
+asn1crypto==1.5.1
 cryptography>=43.0.1
+pyasn1-modules==0.4.1
